--- a/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
+++ b/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{44293367-9030-49A8-9FB1-B0023F54621D}</ProjectGuid>
+    <ProjectGuid>{E453890A-331F-4495-90D5-54B7733429F3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Inventory.Classes</RootNamespace>
-    <AssemblyName>Inventory</AssemblyName>
+    <RootNamespace>Inventory.DataModel</RootNamespace>
+    <AssemblyName>Inventory.DataModel</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -50,21 +50,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\Gender.cs" />
-    <Compile Include="Enums\OwnerTypes.cs" />
-    <Compile Include="Enums\Rooms.cs" />
-    <Compile Include="Enums\StorageType.cs" />
-    <Compile Include="Enums\StuffCategory.cs" />
-    <Compile Include="History.cs" />
-    <Compile Include="Location.cs" />
-    <Compile Include="Owner.cs" />
+    <Compile Include="InventoryContext.cs" />
+    <Compile Include="Migrations\201702280126175_Adding Owners.cs" />
+    <Compile Include="Migrations\201702280126175_Adding Owners.Designer.cs">
+      <DependentUpon>201702280126175_Adding Owners.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702280255215_Split Owner Names.cs" />
+    <Compile Include="Migrations\201702280255215_Split Owner Names.Designer.cs">
+      <DependentUpon>201702280255215_Split Owner Names.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stuff.cs" />
-    <Compile Include="Task.cs" />
+    <Compile Include="Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Inventory\Inventory.Classes.csproj">
+      <Project>{44293367-9030-49a8-9fb1-b0023f54621d}</Project>
+      <Name>Inventory.Classes</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201702280126175_Adding Owners.resx">
+      <DependentUpon>201702280126175_Adding Owners.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702280255215_Split Owner Names.resx">
+      <DependentUpon>201702280255215_Split Owner Names.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
