--- a/Inventory/Inventory.Interface/Inventory.Interface.csproj
+++ b/Inventory/Inventory.Interface/Inventory.Interface.csproj
@@ -4,16 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{44293367-9030-49A8-9FB1-B0023F54621D}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{F20DB924-B314-4E39-ABD1-835A07545E79}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Inventory.Classes</RootNamespace>
-    <AssemblyName>Inventory</AssemblyName>
+    <RootNamespace>Inventory.Interface</RootNamespace>
+    <AssemblyName>Inventory.Interface</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -50,21 +53,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\Gender.cs" />
-    <Compile Include="Enums\OwnerTypes.cs" />
-    <Compile Include="Enums\Rooms.cs" />
-    <Compile Include="Enums\StorageType.cs" />
-    <Compile Include="Enums\StuffCategory.cs" />
-    <Compile Include="History.cs" />
-    <Compile Include="Location.cs" />
-    <Compile Include="Owner.cs" />
+    <Compile Include="DbSetup.cs" />
+    <Compile Include="FunctionExtensions\Extensions.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stuff.cs" />
-    <Compile Include="Task.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Inventory.DataModel\Inventory.DataModel.csproj">
+      <Project>{e453890a-331f-4495-90d5-54b7733429f3}</Project>
+      <Name>Inventory.DataModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Inventory\Inventory.Classes.csproj">
+      <Project>{44293367-9030-49a8-9fb1-b0023f54621d}</Project>
+      <Name>Inventory.Classes</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
