--- a/Inventory/Inventory.Interface/Inventory.Interface.csproj
+++ b/Inventory/Inventory.Interface/Inventory.Interface.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StuffInterface.cs" />
+    <Compile Include="TextParser.cs" />
     <Compile Include="Util\Utility.cs" />
   </ItemGroup>
   <ItemGroup>
