--- a/Inventory/Inventory/Inventory.Classes.csproj
+++ b/Inventory/Inventory/Inventory.Classes.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Enums\StorageType.cs" />
     <Compile Include="Enums\StuffCategory.cs" />
     <Compile Include="History.cs" />
+    <Compile Include="IContainsId.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
