--- a/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
+++ b/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InventoryDBInitializer.cs" />
     <Compile Include="InventoryContext.cs" />
     <Compile Include="Migrations\201702280126175_Adding Owners.cs" />
     <Compile Include="Migrations\201702280126175_Adding Owners.Designer.cs">
