--- a/Inventory/Inventory.Interface/Inventory.ConsoleUI.csproj
+++ b/Inventory/Inventory.Interface/Inventory.ConsoleUI.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F20DB924-B314-4E39-ABD1-835A07545E79}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Inventory.Interface</RootNamespace>
-    <AssemblyName>Inventory.Interface</AssemblyName>
+    <RootNamespace>Inventory.ConsoleUI</RootNamespace>
+    <AssemblyName>Inventory.ConsoleUI</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -54,10 +54,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FunctionExtensions\Extensions.cs" />
-    <Compile Include="OwnerInterface.cs" />
+    <Compile Include="Option.cs" />
+    <Compile Include="OwnerConsoleUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StuffInterface.cs" />
+    <Compile Include="StuffConsoleUI.cs" />
     <Compile Include="TextParser.cs" />
     <Compile Include="Util\Utility.cs" />
   </ItemGroup>
