Cleaned up code smells and renamed stuff to Possessions

--- a/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
+++ b/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Repositories\Old\OwnerRepository.cs" />
     <Compile Include="Repositories\Old\StuffRepository.cs" />
     <Compile Include="Repositories\OwnerRepository.cs" />
-    <Compile Include="Repositories\StuffRepository.cs" />
+    <Compile Include="Repositories\PossessionRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
