--- a/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
+++ b/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
@@ -68,12 +68,17 @@
     <Compile Include="Migrations\201702281136219_Added self reference.Designer.cs">
       <DependentUpon>201702281136219_Added self reference.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703110408513_refactored stuff into possession.cs" />
+    <Compile Include="Migrations\201703110408513_refactored stuff into possession.Designer.cs">
+      <DependentUpon>201703110408513_refactored stuff into possession.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Old\OwnerRepository.cs" />
     <Compile Include="Repositories\Old\StuffRepository.cs" />
     <Compile Include="Repositories\OwnerRepository.cs" />
     <Compile Include="Repositories\PossessionRepository.cs" />
+    <Compile Include="RulesValidation\OwnerRules.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -97,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702281136219_Added self reference.resx">
       <DependentUpon>201702281136219_Added self reference.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703110408513_refactored stuff into possession.resx">
+      <DependentUpon>201703110408513_refactored stuff into possession.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
