Fixed the Possession repo to conform to best pracftices, ctrl+f "Attach" now returns 0 results

--- a/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
+++ b/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Repositories\OwnerRepository.cs" />
     <Compile Include="Repositories\PossessionRepository.cs" />
     <Compile Include="RulesValidation\OwnerRules.cs" />
+    <Compile Include="RulesValidation\PossessionRules.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
