Completely refactored domain object into a PCL style project, meaning it can be consumed by either EF6 or EFCore
then removed the old non-portable domain

--- a/Inventory/Inventory.Core.DataModel/Inventory.Core.DataModel.csproj
+++ b/Inventory/Inventory.Core.DataModel/Inventory.Core.DataModel.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{092b445c-9076-45cb-891b-848256010112}</ProjectGuid>
+    <ProjectGuid>{092B445C-9076-45CB-891B-848256010112}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Inventory.Core.DataModel</RootNamespace>
@@ -110,6 +110,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Inventory.Core.DataModel.rd.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Inventory.PCL.Classes\Inventory.PCL.Classes.csproj">
+      <Project>{4e810fa0-1569-42b8-905d-5c61a3f0a154}</Project>
+      <Name>Inventory.PCL.Classes</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
