--- a/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
+++ b/Inventory/Inventory.DataModel/Inventory.DataModel.csproj
@@ -88,9 +88,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Inventory\Inventory.Classes.csproj">
-      <Project>{44293367-9030-49a8-9fb1-b0023f54621d}</Project>
-      <Name>Inventory.Classes</Name>
+    <ProjectReference Include="..\Inventory.PCL.Classes\Inventory.PCL.Classes.csproj">
+      <Project>{4e810fa0-1569-42b8-905d-5c61a3f0a154}</Project>
+      <Name>Inventory.PCL.Classes</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
